<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#306095">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:background="@drawable/back_bt" />


        <TextView
            android:id="@+id/tv_gallery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/txt_multi_gallery_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_select_type"
            android:layout_width="25dp"
            android:layout_height="19dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="13dp"
            android:background="@drawable/aof_bt"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_spinner_wrapper"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rl_title"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/rl_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image_select_rectangle">

            <TextView
                android:id="@+id/tv_album_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:text="@string/txt_multi_gallery_show_all"
                android:textColor="@color/gallery_selected_album"
                android:textSize="16sp" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/ib_select_album"
            android:layout_width="25dp"
            android:layout_height="19dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="9dp"
            android:background="@drawable/select_bt" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/rl_spinner_wrapper"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:horizontalSpacing="0dp"
        android:listSelector="@color/transparent"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0dp" />

    <LinearLayout
        android:id="@+id/ll_bottom_wrapper"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#929197"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_multi_gallery_cancel"
            android:textColor="@color/white"
            android:textSize="16sp"></TextView>

        <TextView
            android:id="@+id/btn_select_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4b8abf"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_multi_gallery_select"
            android:textColor="@color/white"
            android:textSize="16sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_aof_wrapper"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rl_title"
        android:layout_marginRight="23dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_aof_rectangle"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rl_tv_all"
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:text="@string/txt_multi_gallery_all"
                android:textColor="#4c4c4c"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a3a3a3" />

        <RelativeLayout
            android:id="@+id/rl_tv_picture"
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/tv_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:text="@string/txt_multi_gallery_picture"
                android:textColor="#4c4c4c"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a3a3a3" />

        <RelativeLayout
            android:id="@+id/rl_tv_video"
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/tv_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:text="@string/txt_multi_gallery_video"
                android:textColor="#4c4c4c"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_spinner_wrapper"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="-14dp"
        android:background="@color/white"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:visibility="invisible" />
</RelativeLayout>
